# Paint

./: CMakeLists.txt  README.md  drowing_zone.cpp  drowing_zone.h  images.qrc  mainwindow.cpp  mainwindow.h  new_file_window.cpp  new_file_window.h  open_window.cpp  open_window.h
